--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "whatsapp-proxy-server",
   "version": "1.0.0",
   "description": "Simple proxy server for WhatsApp API using Node.js and Express",
-  "main": "server.js",
+  "main": "proxy_server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node proxy_server.js",
+    "dev": "nodemon proxy_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
